fix: MP4 专辑内切歌 —— 循环收在专辑内、随机跟视图、切歌不再沿用上一首进度
三处长期存在的错位，都出在"一张网络CD = 一条队列项"这个前提下：

1. 列表循环边界错
   上游 repeatMode=2（列表循环）实际表现为"跳到队列里别的碟"。
   改成"在这张专辑内部循环"：服务端 Mp4AlbumAdvance.handleCompletion 末尾且
   REPEAT_ALL 时 playTrackInAlbum(..., 0) 并直接 return true（不能落到 resetNextEntry）；
   客户端 Mp4AlbumPlayback.advanceOnCompleted / step 同规则。

2. 随机模式只显示不生效
   上游 shuffle 字段没有任何实际效果。改由 Mp4AlbumPlayback.step() 自己实现，
   取值**范围跟视图走**（在专辑里就专辑内随机，在列表层就整个队列随机），
   与"下一曲"按钮规则一致。服务端用 Mp4AlbumScopePacket(deviceId, albumQueueIndex)
   镜像视图范围，Mp4AlbumView.syncScope() 只在变化时发包。

3. 切歌后进度条从上一首的位置开始
   起播位置的权威出处是服务端 MP4PlaybackProgressPersistence#targetMillis（全仓唯一
   调用点，紧跟着就建会话）。而"一条队列项 = 整张碟"意味着碟内换曲时 queueIndex 不变，
   上一首播到哪儿会被原样交给下一首。
   对策：Mp4SongStartGuard 按**曲目身份**（歌名@曲长，从物品 NBT 的 netmusic:song_info 读）
   判定换曲，MP4PlaybackProgressPersistenceMixin 在 targetMillis RETURN 处判身份、
   MP4PlaybackSyncManagerMixin 在 start HEAD 处 cancel 并用公开构造器重建 elapsed=0 的副本复入。
   换曲标记由"新曲目真的从头起播"关闭，不用倒计时。

附带：
- 专辑内切曲只有服务端能写 NBT，新增 Mp4AlbumTrackPacket → DiscStudioService.controlMp4Album
  （findByDeviceId → selectTrack → Mp4QueueWriter.write，restart=true 再补 restartSelected）。
- 服务端改完 NBT 靠容器同步回来、不触发 loadQueue，故 Mp4AlbumView.tickSync() 轮询兜底。
- 视图折叠只发生在渲染快照 Mp4GuiViewStateMixin，MP4FocusState 一律保持真实下标，
  否则控制包会带错下标（拖进度条/切歌都会错源）。
- 删除已废弃的 disc/AlbumGroups（"摊平 N 条"方案作废）。